<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.charliepc.newproj.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingHorizontal="25dp" tools:targetApi="o">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fieldname_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fieldname"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:padding="5dp">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="textPersonName"
                android:hint="Field Name: "/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fieldsize_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_size"
            android:textSize="22sp"
            android:padding="5dp">
        <EditText
            android:id="@+id/size_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="number"
            android:hint="Field Size: "/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/acre_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acre"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/hectare_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:layout_toEndOf="@+id/acre_id"
                android:layout_toRightOf="@+id/acre_id"
                android:text="@string/hectare" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_crop"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:background="@color/white"
                android:padding="5dp" />

        </RelativeLayout>


        <Button
            android:id="@+id/addnut_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:background="@android:drawable/ic_menu_send" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        app:headerLayout="@layout/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
