<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addfertn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:padding="5dp">

        <EditText
            android:id="@+id/addfertname_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPersonName"
            android:hint="@string/fertilizer_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addfertp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="5dp">
        <EditText
            android:id="@+id/addfertprice_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="number"
            android:hint="@string/fertilizer_price"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrient_content"
        android:textSize="16sp"
        android:padding="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Spinner
            android:id="@+id/nutspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="10dp"/>

        <EditText
            android:id="@+id/addfertcontent_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:ems="20"
            android:hint="@string/content"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Spinner
            android:id="@+id/nutspinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="10dp"/>

        <EditText
            android:id="@+id/addfertcontent2_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="20"
            android:hint="@string/content"
            android:inputType="number" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Spinner
            android:id="@+id/nutspinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="10dp"/>

        <EditText
            android:id="@+id/addfertcontent3_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:ems="20"
            android:hint="@string/content"
            android:inputType="number" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Spinner
            android:id="@+id/nutspinner4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="10dp"/>

        <EditText
            android:id="@+id/addfertcontent4_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="20"
            android:hint="@string/content"
            android:inputType="number" />
    </RelativeLayout>

</LinearLayout>